--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -44,74 +44,74 @@ jobs:
         working-directory: apps/landing
         run: |
           set -o pipefail
-          pnpm dlx wrangler pages deploy dist/ --project-name landing123 2>&1 | tee -a BUILD_OUTPUT
+          pnpm dlx wrangler pages deploy dist/ --project-name landing 2>&1 | tee -a BUILD_OUTPUT
       
       - name: Export `DEPLOYMENT_URL`
         id: result
         run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
-  # web:
-  #   name: Web
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: web
-  #     url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-  #   steps:
-  #     - name: Git clone the repository
-  #       uses: actions/checkout@v4
+  web:
+    name: Web
+    runs-on: ubuntu-latest
+    environment:
+      name: web
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
       
-  #     - uses: pnpm/action-setup@v4
-  #       with:
-  #         version: latest
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
       
-  #     - name: Install dependencies
-  #       run: pnpm i
+      - name: Install dependencies
+        run: pnpm i
       
-  #     - name: Build
-  #       working-directory: apps/web
-  #       env:
-  #         NITRO_PRESET: cloudflare_pages
-  #       run: pnpm build
+      - name: Build
+        working-directory: apps/web
+        env:
+          NITRO_PRESET: cloudflare_pages
+        run: pnpm build
       
-  #     - name: Deploy
-  #       working-directory: apps/web
-  #       run: |
-  #         set -o pipefail
-  #         pnpm dlx wrangler pages deploy 2>&1 | tee -a BUILD_OUTPUT
+      - name: Deploy
+        working-directory: apps/web
+        run: |
+          set -o pipefail
+          pnpm dlx wrangler pages deploy 2>&1 | tee -a BUILD_OUTPUT
       
-  #     - name: Export `DEPLOYMENT_URL`
-  #       id: result
-  #       run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
+      - name: Export `DEPLOYMENT_URL`
+        id: result
+        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
-  # api:
-  #   name: API
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: api
-  #     url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-  #   steps:
-  #     - name: Git clone the repository
-  #       uses: actions/checkout@v4
+  api:
+    name: API
+    runs-on: ubuntu-latest
+    environment:
+      name: api
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
       
-  #     - uses: pnpm/action-setup@v4
-  #       with:
-  #         version: latest
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
       
-  #     - name: Install dependencies
-  #       run: pnpm i
+      - name: Install dependencies
+        run: pnpm i
       
-  #     - name: Build
-  #       working-directory: apps/api
-  #       env:
-  #         NITRO_PRESET: cloudflare_pages
-  #       run: pnpm build
+      - name: Build
+        working-directory: apps/api
+        env:
+          NITRO_PRESET: cloudflare_pages
+        run: pnpm build
       
-  #     - name: Deploy
-  #       working-directory: apps/api
-  #       run: |
-  #         set -o pipefail
-  #         pnpm dlx wrangler deploy 2>&1 | tee -a BUILD_OUTPUT
+      - name: Deploy
+        working-directory: apps/api
+        run: |
+          set -o pipefail
+          pnpm dlx wrangler deploy 2>&1 | tee -a BUILD_OUTPUT
       
-  #     - name: Export `DEPLOYMENT_URL`
-  #       id: result
-  #       run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
+      - name: Export `DEPLOYMENT_URL`
+        id: result
+        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
