--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -77,7 +77,7 @@ jobs:
         working-directory: apps/web
         run: |
           set -o pipefail
-          pnpm dlx wrangler pages deploy 2>&1 | tee -a BUILD_OUTPUT
+          pnpm dlx wrangler pages deploy dist/ --project-name web 2>&1 | tee -a BUILD_OUTPUT
       
       - name: Export `DEPLOYMENT_URL`
         id: result
@@ -110,7 +110,7 @@ jobs:
         working-directory: apps/api
         run: |
           set -o pipefail
-          pnpm dlx wrangler deploy 2>&1 | tee -a BUILD_OUTPUT
+          pnpm dlx wrangler deploy src/index.ts --define "import.meta.env.GIT_SHA:$(git rev-parse HEAD)" 2>&1 | tee -a BUILD_OUTPUT
       
       - name: Export `DEPLOYMENT_URL`
         id: result
